--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 .row{
     justify-content: center;
+    margin-top: -5px;
 }
 
 .login{
@@ -8,4 +9,18 @@
 
 .sign-up{
     justify-content: end;
+}
+
+.btn1{
+    background: rgb(165,109,235);
+}
+
+.btn2{
+    background: rgb(41,255,173);
+
+}
+
+.cat{
+    width: 100%;
+    height: 100%;
 }
